# asymmetry

./: .git_commit_msg.txt  .gitattributes  .gitignore  .test_durations  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  THIRD_PARTY_LICENSES.md  constraints.txt  lint_output.txt  pyproject.toml  test_lfkt.py
.claude/: settings.json
.claude/hooks/: structural_check.py
.githooks/: pre-commit
.github/workflows/: ci.yml  claude.yml  cut-release.yml  docs-pages.yml  full-suite.yml  preview-macos-arm.yml  preview-windows.yml  release.yml
docs/: ARCHITECTURE.md  GUI_GUIDELINES.md  HARNESS.md  INDEX.md  Makefile  PLANS.md  QUALITY.md  README.md  STYLE.md  conf.py  contributing.rst  index.rst  installation.rst  make.bat  open_docs.sh  requirements.txt
docs/_ext/: lazy_images.py
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api/: core.rst  fitting.rst  fourier.rst  gui.rst  index.rst  io.rst  negmu.rst  project.rst  transforms.rst
docs/explanation/: comparison.rst  conventions.rst  glossary.rst  index.rst  musr_primer.rst
docs/getting_started/: index.rst  installation.rst  key_concepts.rst  quickstart.rst
docs/investigations/: gui-shard-gil-signalslot-deadlock.md  qtbug-tahoe-qscreen-uaf.md  tahoe-qscreen-uaf-session-handoff-2026-07-09.md  tahoe-qscreen-uaf.md
docs/porting/: README.md  ROADMAP.md  comparison-matrix.md  index.json
docs/reference/: alc_mode.rst  asymmetry_domain_global_fit.rst  composite_models.rst  cookbook.rst  count_domain_fitting.rst  data_processing.rst  detector_grouping.rst  diffusion_ballistic_lf.rst  exclusions.rst  fit_wizard.rst  fit_workflow_diagnostics.rst  fitting.rst  fourier_analysis.rst  frequency_domain_fitting.rst  frequency_finishers.rst  global_fit_wizard.rst  grouped_time_domain_fitting.rst  grouping_calibration.rst  gui_usage.rst  index.rst  loading_data.rst  logbook.rst  muonium_kinetics.rst  negative_muon_analysis.rst  parameter_trending.rst  project_files.rst  radical_correlation.rst  rotating_frame.rst  run_arithmetic.rst  sc_penetration_depth.rst  simulation.rst  spectral_moments.rst  suggest_next_point.rst  user_functions.rst  vector_polarization.rst  workflow_conveniences.rst
docs/screenshots/: __init__.py  capture.py  capture_corpus.py
docs/studies/: bed-next-angle-knight-shift.md  bed-next-point-suggestion.md  bed_prototype.py  datagroup-fitseries-unification.md  prototype-results.md
docs/user_guide/: alc_mode.rst  assessing_a_fit.rst  asymmetry_domain_global_fit.rst  comparison.rst  composite_models.rst  cookbook.rst  count_domain_fitting.rst  data_processing.rst  detector_grouping.rst  diffusion_ballistic_lf.rst  dynamic_relaxation.rst  exclusions.rst  exponential_relaxation.rst  fit_wizard.rst  fit_workflow_diagnostics.rst  fitting.rst  fourier_analysis.rst  frequency_domain_fitting.rst  frequency_finishers.rst  gaussian_relaxation.rst  global_fit_wizard.rst  grouped_time_domain_fitting.rst  grouping_calibration.rst  gui_usage.rst  index.rst  lf_kubo_toyabe.rst  loading_data.rst  logbook.rst  muon_fluorine.rst  muonium_kinetics.rst  negative_muon_analysis.rst  oscillatory.rst  parameter_trending.rst  project_files.rst  radical_correlation.rst  rotating_frame.rst  run_arithmetic.rst  sc_penetration_depth.rst  simulation.rst  spectral_moments.rst  (+6 more)
docs/workflows/: alc_scan_tcnq.rst  calibration_grouping_emu.rst  dynamic_kt_copper.rst  fmuf_entangled_states.rst  global_fit_ionic_motion.rst  index.rst  knight_shift_angle.rst  lf_decoupling_dynamics.rst  photomusr_silicon_periods.rst  qsl_spin_dynamics_ybzn2gao5.rst  superconductor_penetration_depth.rst  temperature_scan_magnetism.rst
examples/: __init__.py  basic_dataset_loading.py  composite_models.py  custom_loader.py  global_fit_wizard.py  logbook_usage.py  parameter_trending.py  project_files.py  run_all.py  sc_penetration_depth.py  single_fit.py  transform_workflow.py
packaging/: asymmetry.spec  installer.nsi  macos_icon.py
packaging/macos/: dmg_settings.py
packaging/windows/: asymmetry.iss  fetch_hdf4_dlls.py  installer.wxs
scripts/: build_dmg_background.py
src/asymmetry/: __init__.py  __main__.py  cli.py
tests/: README.md  __init__.py  _qt_helpers.py  conftest.py  test_alc_state_reset_on_new_project.py  test_app_imports.py  test_archetype_constants_authority.py  test_asymmetry_global_fit.py  test_asymmetry_scale.py  test_asymmetry_series.py  test_axis_limit_field_characterization.py  test_background_correction.py  test_background_modes.py  test_background_reference_resolution.py  test_ballistic.py  test_batch_model.py  test_batch_outcome_summary_gui.py  test_batch_seeding_sync.py  test_batch_trend_default_traps.py  test_cds_affine_ties_corpus.py  test_chain_seeding.py  test_cli.py  test_coerce_group_names_pinning.py  test_combine.py  test_component_tracking.py  test_composite_model.py  test_composite_parameter_dialog.py  test_composite_unknown_component_hint.py  test_count_domain_fits.py  test_count_fit_panel_gui.py  test_cross_group_fit.py  test_cross_group_fit_dialog.py  test_data_browser_batch.py  test_data_browser_combine.py  test_data_browser_custom_columns.py  test_data_browser_panel.py  test_dataset.py  test_deadtime.py  test_detector_exclusion.py  test_detector_layout_dialog.py  (+167 more)
tests/core/: test_affine_ties.py  test_alc_baseline_high_degree.py  test_alpha_estimation.py  test_angles.py  test_angular_assignment.py  test_angular_fourier2.py  test_apodisation_suggestion.py  test_asymmetry_global_fit.py  test_axis_transforms.py  test_beta_correction.py  test_component_search.py  test_component_tags.py  test_composite_model.py  test_composite_parameters.py  test_correction_order_alpha.py  test_count_domain_fits.py  test_cross_group_fit.py  test_cross_group_roles.py  test_dataset.py  test_deadtime.py  test_detector_exclusion.py  test_diffusion.py  test_engine_profiled_fit.py  test_entrypoints.py  test_envelope_match.py  test_error_oversampling.py  (+61 more)
tools/: global_fit_gscaling_probe.py  global_wizard_harness.py  harness.py  package_corpus.py  perf_benchmark.py  release_prep.py
(+898 files in other folders)
