[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asymmetry"
version = "0.3.7"
description = "A Python library for muon-spin spectroscopy (μSR) data analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Asymmetry Contributors" },
]
keywords = ["muon", "musr", "spectroscopy", "physics", "data-analysis"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.24,<2.3",  # <2.3 for numba compatibility (used by iminuit)
    "iminuit>=2.0,<3",
    "scipy>=1.10,<1.18",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5,<6.11",
    "matplotlib>=3.7,<3.11",
]
gle = ["gleplot @ git+https://github.com/BenHuddart/gleplot.git"]
hdf5 = ["h5py>=3.8,<4"]
root = ["uproot>=5.0,<6"]
dev = [
    "pytest>=7.0,<10",
    "pytest-cov>=4.0,<8",
    "pytest-xdist>=3,<4",
    "pytest-timeout>=2.1,<3",
    "Pillow>=10.0,<13",
    "ruff>=0.1,<0.16",
    "sphinx>=7.0,<10",
    "sphinx-rtd-theme>=2.0,<4",
]
all = ["asymmetry[gui,gle,hdf5,root,dev]"]

[project.scripts]
asymmetry = "asymmetry.cli:main"

[project.gui-scripts]
asymmetry-gui = "asymmetry.gui.app:main"

[project.urls]
Homepage = "https://github.com/BenHuddart/asymmetry"
Documentation = "https://benhuddart.github.io/asymmetry/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asymmetry = [
    "resources/*.png",
    "resources/*.svg",
    "resources/fonts/*.ttf",
    "resources/fonts/OFL.txt",
    "gui/styles/*.qss",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --timeout=120 --timeout-method=thread"
markers = [
    "unit: pure-python, no Qt, no file I/O",
    "gui: requires PySide6 / Qt widgets",
    "io: exercises a file-format loader",
    "slow: individual runtime > ~1s (full tier only)",
    "integration: multi-component end-to-end flow (full tier only)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Ruff format handles normal wrapping; long prose/UI strings are intentional.

[tool.ruff.lint.per-file-ignores]
"src/asymmetry/core/fitting/ballistic.py" = ["N802", "N803"]  # Physics notation (nD, B_LF, D_hop, lambda_0D)
"src/asymmetry/core/fitting/composite.py" = ["N803"]  # Physics parameter names (A, Lambda, Delta)
"src/asymmetry/core/fitting/diffusion.py" = ["N802", "N803"]  # Physics notation (nD, D_nD)
"src/asymmetry/core/fitting/models.py" = ["N803"]  # Physics parameter names (A0, Lambda, Delta)
"src/asymmetry/core/fitting/muon_fluorine/polarization.py" = ["N803", "N806"]  # Physics names as args and locals (r_muF, B fields)
"src/asymmetry/core/fitting/muonium.py" = ["N803"]  # Physics parameter names (A_hf, D)
"src/asymmetry/core/fitting/nuclear_dipole.py" = ["N803"]  # Physics parameter names (B_dip, lambda_T, J)
"src/asymmetry/core/fitting/parameter_models.py" = ["N803", "N806"]  # Physics parameter names (Tc, B0, D_2D)
"src/asymmetry/core/fitting/sc/models.py" = ["N803"]  # Physics parameter names (Tc)
"src/asymmetry/core/project/schema.py" = ["N818"]  # Public API exception class predates the suffix rule
"src/asymmetry/gui/mainwindow.py" = ["N802"]  # Qt closeEvent override
"src/asymmetry/gui/panels/fit_function_builder.py" = ["N802", "N815"]  # Qt-compatible shim names
"src/asymmetry/gui/panels/model_fit_dialog.py" = ["N802", "N815"]  # Qt-compatible shim names
"src/asymmetry/gui/panels/plot_panel.py" = ["N802"]  # Qt resizeEvent override
"src/asymmetry/gui/widgets/detector_schematic.py" = ["N802"]  # Qt sizeHint override
"src/asymmetry/gui/windows/fit_wizard_window.py" = ["N802"]  # Qt closeEvent override
"tests/test_fit_panel_tabs.py" = ["N802", "E402"]  # Qt-style test doubles; importorskip guard
"tests/test_fit_parameters_panel.py" = ["E402"]  # pytest.importorskip before optional Qt imports
"tests/test_field_scan_fitting.py" = ["N803"]  # Physics parameter names (B0, Bwid)
"tests/test_integral_scan_gui.py" = ["E402"]  # pytest.importorskip before optional Qt imports
"tests/test_fitting_engine.py" = ["N803"]  # Physics-style model parameter names
"tests/test_grouped_time_domain_fitting.py" = ["N803"]  # Physics parameter names (Lambda)
"tests/test_wimda_parity_components.py" = ["N803"]  # Physics parameter names (J)
# E402: pytest.importorskip / pytestmark before optional-dependency imports is intentional in all GUI and IO test files
"tests/test_composite_parameter_dialog.py" = ["E402"]
"tests/test_cross_group_fit_dialog.py" = ["E402"]
"tests/test_data_browser_panel.py" = ["E402"]
"tests/test_detector_layout_dialog.py" = ["E402"]
"tests/test_detector_schematic.py" = ["E402"]
"tests/test_fit_function_builder.py" = ["E402"]
"tests/test_fit_panel_phase5_range.py" = ["E402"]
"tests/test_fit_panel_worker.py" = ["E402"]
"tests/test_fit_slot_orchestration.py" = ["E402"]
"tests/test_fit_wizard_window.py" = ["E402"]
"tests/test_fit_wizard.py" = ["E402"]
"tests/test_global_fit_wizard_window.py" = ["E402"]
"tests/test_global_fit_wizard.py" = ["E402"]
"tests/test_global_parameter_fit_window.py" = ["E402"]
"tests/test_grouping_dialog.py" = ["E402"]
"tests/test_gui_panels_basic.py" = ["E402"]
"tests/test_gui_shell.py" = ["E402"]
"tests/test_latex_renderer.py" = ["E402"]
"tests/test_mainwindow_additional.py" = ["E402"]
"tests/test_mainwindow_phase4_inspector.py" = ["E402"]
"tests/test_mainwindow_toolbar_styles.py" = ["E402"]
"tests/test_model_fit_dialog.py" = ["E402"]
"tests/test_nexus_loader.py" = ["E402"]
"tests/test_plot_panel.py" = ["E402"]
"tests/test_plot_panel_styling.py" = ["E402"]
"tests/test_project_schema.py" = ["E402", "N802"]  # Split module-level GUI fixtures and Qt test doubles
"tests/test_psi_loader.py" = ["E402"]
"tests/test_root_loader.py" = ["E402"]
"tests/test_run_info_dialog.py" = ["E402"]
"tests/test_trend_surface.py" = ["E402"]  # pytest.importorskip guard before optional Qt/numpy imports
